# HearWise-master

./: build.gradle.kts  build_output.txt  build_output3.txt  out2.txt  out3.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hearwise/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
app/src/main/java/com/example/hearwise/: MainActivity.kt
app/src/main/java/com/example/hearwise/audio/: AssetExtractor.kt  SineWaveGenerator.kt
app/src/main/java/com/example/hearwise/core/navigation/: NavGraph.kt
app/src/main/java/com/example/hearwise/core/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/hearwise/data/: HearingProfile.kt
app/src/main/java/com/example/hearwise/data/model/: HearingProfile.kt
app/src/main/java/com/example/hearwise/engine/: AssetExtractor.kt  SineWaveGenerator.kt  WhisperEngine.kt
app/src/main/java/com/example/hearwise/feature/another/: AnotherScreen.kt
app/src/main/java/com/example/hearwise/feature/auth/: LoginScreen.kt  SignupScreen.kt
app/src/main/java/com/example/hearwise/feature/calibration/: CalibrationScreen.kt  CalibrationViewModel.kt
app/src/main/java/com/example/hearwise/navigation/: NavGraph.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_splash_logo_padded.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hearwise/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
